# PaperMC-Docker

./: .gitignore  README.md  Taskfile.yml  pyproject.toml  update_last_docker_build_state.py
.github/workflows/: build-papermc-docker.yml
container/: Dockerfile  run.sh
tools/: check_new_release.py  check_new_release.py.bkp-marshal  openapi_v3.yaml  update_last_docker_build_state.py  utils.py
tools/.openapi-generator/: FILES
tools/papermc_api_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
tools/papermc_api_client/api/: __init__.py  download_controller_api.py  meta_v2_api.py  meta_v3_api.py  project_controller_api.py  version_build_controller_api.py  version_family_controller_api.py
tools/papermc_api_client/docs/: BuildResponse.md  Checksums.md  Commit.md  DownloadControllerApi.md  ErrorResponse.md  Java.md  JavaFlags.md  JavaVersion.md  MetaV2Api.md  MetaV3Api.md  Project.md  ProjectControllerApi.md  ProjectResponse.md  ProjectsControllerApi.md  ProjectsResponse.md  Support.md  Version.md  VersionBuild.md  VersionBuildControllerApi.md  VersionBuildsControllerApi.md  VersionFamilyBuild.md  VersionFamilyControllerApi.md  VersionResponse.md  VersionsResponse.md
tools/papermc_api_client/models/: __init__.py  build_response.py  builds_response.py  checksums.py  commit.py  download.py  error_response.py  java.py  java_flags.py  java_version.py  project.py  projects_response.py  (+4 more)
version-checker/: check_new_release.py  papermc_api_client_README.md
version-checker/papermc_api_client/: __init__.py  api_client.py  configuration.py
(+50 files in other folders)
